--- a/05_Dom/one.html
+++ b/05_Dom/one.html
@@ -4,12 +4,28 @@
     <meta charset="UTF-8">
   
     <title>DOM learning</title>
+    <style>
+        .bg-black{
+            background-color: #212121;
+            color: #fff;
+        }
+    </style>
 </head>
-<body>
+<body class="bg-black">
     
-    <div class="bg_black">
-        <h1 id="title" class="heading">DOM learning on Chai aur Code </h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita similique delectus necessitatibus reiciendis dolores optio vero, laboriosam animi veniam? Numquam placeat, ipsum voluptates eius illo quidem voluptate hic optio sed.</p>
+    <div>
+        <h1 id="title" class="heading">DOM learning on Chai aur Code <span style="display: none;">test text </span> </h1>
+        <h2>Lorem ipsum dolor sit.</h2>
+        <h2>Lorem ipsum dolor sit amet.</h2>
+        <h2>Lorem ipsum dolor sit amet2.</h2>
+         <input type="password" name="" id="">
+        <p>Lorem ipsum dolor sit amet sed.</p>
+
+        <ul>
+            <li>One</li>
+            <li>two</li>
+            <li>three</li>
+        </ul>
     </div>
 </body>
 </html>
