--- a/05_Dom/one.html
+++ b/05_Dom/one.html
@@ -2,30 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-  
-    <title>DOM learning</title>
-    <style>
-        .bg-black{
-            background-color: #212121;
-            color: #fff;
-        }
-    </style>
+   
+    <title>DOM learning </title>
 </head>
-<body class="bg-black">
-    
+<body>
     <div>
-        <h1 id="title" class="heading">DOM learning on Chai aur Code <span style="display: none;">test text </span> </h1>
-        <h2>Lorem ipsum dolor sit.</h2>
-        <h2>Lorem ipsum dolor sit amet.</h2>
-        <h2>Lorem ipsum dolor sit amet2.</h2>
-         <input type="password" name="" id="">
-        <p>Lorem ipsum dolor sit amet sed.</p>
-
-        <ul>
-            <li>One</li>
-            <li>two</li>
-            <li>three</li>
-        </ul>
+        <h1 class="heading">DOM learning on Chai aur Code</h1>
+        <p>Lorem ipsum dolor sit amet.</p>
     </div>
 </body>
 </html>
