--- a/05_DOM/index.html
+++ b/05_DOM/index.html
@@ -3,29 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> DOM learning </title>
-    <style>
-        .bg-black{
-            background-color: #212121;
-            color: #fff;
-        }
-    </style>
+    <title>DOM  | Chai aur Code </title>
 </head>
-<body class="bg-black">
-
-   <div> 
-    <h1 id="title" class="heading"> DOM learning on chai aur code  <span style="display: none;"> test text </span> </h1>
-    <h2>Lorem char words </h2>
-    <h2>lorem teen words </h2>
-    <p>Lorem ipsum dolor sit amet.</p>
-    <input type="password" name="" id="">
-
-    <ul>
-        <li class="list-item">one</li>
-        <li class="list-item">two</li>
-        <li class="list-item">three</li>
-        <li class="list-item">four</li>
-    </ul>
-</div>
+<body style="background-color: #212121; color: #fff;">
+    <div class="parent">
+        <div class="day">Monday</div>
+        <div class="day">Tuesday</div>
+        <div class="day">Wednesday</div>
+        <div class="day">Thursday</div>
+    </div>
 </body>
+<script>
+    const parent = document.querySelector('.parent')
+    // console.log(parent);
+    // console.log(parent.children);
+    // console.log(parent.children[1].innerHTML);
+
+    for (let i = 0; i< parent.children.length ; i++){
+        // console.log(parent.children[i].innerHTML);
+    }
+
+    parent.children[1].style.color = "orange"
+    // console.log(parent.firstElementChild);
+    // console.log(parent.lastElementChild);
+
+
+    const day1 = document.querySelector('.day')
+    // console.log(day1);
+    // console.log(day1.nextElementSibling);
+    // console.log(day1.parentElement);
+
+
+    console.log("NODES: ", parent.childNodes);
+</script>
 </html>
