--- a/05_DOM/index.html
+++ b/05_DOM/index.html
@@ -3,37 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DOM  | Chai aur Code </title>
+    <title>Chai Aur Code</title>
 </head>
-<body style="background-color: #212121; color: #fff;">
-    <div class="parent">
-        <div class="day">Monday</div>
-        <div class="day">Tuesday</div>
-        <div class="day">Wednesday</div>
-        <div class="day">Thursday</div>
-    </div>
+<body style="background-color: #212121; color:#fff">
+    <ul class="language">
+        <li>Javascript</li>
+    </ul>
 </body>
 <script>
-    const parent = document.querySelector('.parent')
-    // console.log(parent);
-    // console.log(parent.children);
-    // console.log(parent.children[1].innerHTML);
-
-    for (let i = 0; i< parent.children.length ; i++){
-        // console.log(parent.children[i].innerHTML);
+    function addLanguage(langName){
+       const li =  document.createElement('li');
+       li.innerHTML = `${langName}`
+       document.querySelector('.language').appendChild(li)
     }
+    addLanguage("C++")
+    addLanguage("Solidity")
 
-    parent.children[1].style.color = "orange"
-    // console.log(parent.firstElementChild);
-    // console.log(parent.lastElementChild);
+    function addOptiLanguage(langName){
+        const li = document.createElement('li');
+        li.appendChild(document.createTextNode(langName))
+        document.querySelector('.language').appendChild(li)
+    }
+    addOptiLanguage('golang')
+
+    // Edit
+   const secondLang =  document.querySelector("li:nth-child(2)")
+   const newli =  document.createElement('li')
+   newli.textContent = "Rust"
+   secondLang.replaceWith(newli)
+
+   const firstLang = document.querySelector("li:first-child")
+   firstLang.outerHTML = '<li>TypeScript</li>'
+
+    //   remove
+
+    const lastlang = document.querySelector('li:last-child')
+    lastlang.remove()
 
 
-    const day1 = document.querySelector('.day')
-    // console.log(day1);
-    // console.log(day1.nextElementSibling);
-    // console.log(day1.parentElement);
-
-
-    console.log("NODES: ", parent.childNodes);
 </script>
 </html>
